--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body {
   top: 50%;
   left: 50%;
   background-color: #ffffff;
-  width: 500px;
+  max-width: 500px;
   padding: 3em;
   border-radius: 1em;
   perspective: 800px;
@@ -98,7 +98,7 @@ body {
 
 .credit-card {
   position: relative;
-  width: 350px;
+  width: 320px;
   height: 220px;
   margin: auto;
   transform-style: preserve-3d;
