--- a/style.scss
+++ b/style.scss
@@ -228,7 +228,12 @@ input {
 
 .date-cvv {
 	display: flex;
+	gap: 20px;
 	justify-content: space-between;
+}
+
+.validity {
+	min-width: 145px;
 }
 
 
